# mk2

./: .gitignore  README.md  STYLE_GUIDE.md  pyproject.toml
data/videos/: README.md
eval/: BASELINE_0.md  clips.py  metrics.py  run.py
eval/gold_workflows/: README.md  development.json  holdout.json  negative.json
eval/runs/: README.md
eval/scores/: README.md
grasp/: DESIGN.md  README.md  __init__.py  benchmark.py  episode.py  schemas.py
grasp/tests/: test_benchmark.py  test_episode.py
src/morrow/: __init__.py  analyze.py  anthropic_backend.py  backend.py  cases.py  cli.py  demo.py  ingest.py  model.py  qwen.py  schemas.py  validate.py
src/morrow/demo_static/: app.js  index.html  styles.css
tests/: test_demo.py  test_qwen_parse.py  test_run.py  test_schemas.py  test_validate.py
