[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morrow"
version = "0.0.1"
description = "Film a demo, describe what you want, get an evidence-backed WorkflowSpec."
requires-python = ">=3.11"
# Two dependencies, each earning its place: pydantic makes the WorkflowSpec contract
# enforceable, anthropic is the model backend. ffmpeg/ffprobe are system tools, not deps.
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
morrow = "morrow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/morrow"]

[tool.pytest.ini_options]
pythonpath = ["src", "eval"]
testpaths = ["tests"]
