[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morrow"
version = "0.0.1"
description = "Film a demo, describe what you want, get an evidence-backed WorkflowSpec."
requires-python = ">=3.11"
# Core stays light: only pydantic (the WorkflowSpec contract). The dashboard and the
# evaluation harness import it without pulling a deep-learning stack. ffmpeg/ffprobe are
# system tools, not deps. Running the local Qwen backend needs the `qwen` extra; the
# canonical baseline should pin exact versions (see eval runs / provenance) rather than
# rely on these lower bounds.
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
qwen = [
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.57",
    "pillow>=10",
    "accelerate>=0.30",
]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8"]

[project.scripts]
morrow = "morrow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/morrow"]

[tool.pytest.ini_options]
pythonpath = ["src", "eval"]
testpaths = ["tests"]
